--- a/gabung/index.html
+++ b/gabung/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
 
-<h1>Produk Live MadGazan 8 November 2025</h1>
+<h1>Produk Live MadGazan</h1>
 <h2>Manajemen Shopee Live V7</h2>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
