--- a/gabung/v4.html
+++ b/gabung/v4.html
@@ -62,6 +62,9 @@
     <button onclick="exportLocalStorageClean()">Backup Data (Tanpa Duplikat)</button>
     <input type="file" id="importFile" accept=".json">
     <button onclick="importLocalStorage()">Import Data</button>
+    <!-- 🔽 Tombol baru universal -->
+    <button onclick="exportUniversalLocal()">Backup Universal (Halaman Ini)</button>
+    <button onclick="importUniversalLocal()">Import Universal</button>
   </div>
   <button style="margin-top:10px; background:#ffd0d0; border-color:#cc0000;" onclick="resetLocalStorage()">❌ Hapus Semua Data Halaman Ini</button>
 </div>
@@ -188,6 +191,50 @@ function showLocalStorageData() {
     ? JSON.stringify(data, null, 2)
     : '📭 LocalStorage halaman ini kosong.';
   showToast('✅ Data halaman ini berhasil ditampilkan.', 'success');
+}
+
+/* ===== UNIVERSAL BACKUP SISTEM (v2) ===== */
+// Backup hanya data unik halaman ini → untuk dibagikan ke halaman lain
+function exportUniversalLocal() {
+  const data = {};
+  for (let i = 0; i < localStorage.length; i++) {
+    const key = localStorage.key(i);
+    if (key.startsWith(PAGE_PREFIX)) data[key] = localStorage.getItem(key);
+  }
+  if (Object.keys(data).length === 0) return showToast('📭 Tidak ada data halaman ini untuk dibackup.', 'warning');
+  
+  const blob = new Blob([JSON.stringify({ origin: PAGE_PREFIX, data }, null, 2)], { type: 'application/json' });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement('a');
+  a.href = url;
+  a.download = `madgazan_backup_${PAGE_PREFIX}.json`;
+  a.click();
+  URL.revokeObjectURL(url);
+  showToast('✅ Backup halaman ini (universal) berhasil.', 'success');
+}
+
+// Import universal → bisa menerima file dari halaman mana pun
+function importUniversalLocal() {
+  const fileInput = document.getElementById('importFile');
+  const file = fileInput.files[0];
+  if (!file) return showToast('❌ Pilih file JSON dulu.', 'error');
+  const reader = new FileReader();
+  reader.onload = e => {
+    try {
+      const json = JSON.parse(e.target.result);
+      const imported = json.data ? json.data : json; // mendukung format lama & baru
+      let count = 0;
+      Object.entries(imported).forEach(([key, val]) => {
+        localStorage.setItem(key, val);
+        count++;
+      });
+      showToast(`✅ Import universal selesai.\nTotal data masuk: ${count}`, 'success');
+      setTimeout(() => location.reload(), 1500);
+    } catch (err) {
+      showToast('❌ File tidak valid: ' + err.message, 'error');
+    }
+  };
+  reader.readAsText(file);
 }
 </script>
 
